Version 0.6.8.
* Modify html.
* Update dependent libraries.